force-app/main/default/objects/Account/fields/Preferred_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Terms__c</fullName>
    <label>Preferred Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Cash</fullName>
                <default>true</default>
                <label>Immediate Cash</label>
            </value>
            <value>
                <fullName>7 Days Credit</fullName>
            </value>
            <value>
                <fullName>15 Days Credit</fullName>
            </value>
            <value>
                <fullName>30 Days Credit</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>