force-app/main/default/objects/Account/fields/Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating__c</fullName>
    <label>Quality Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
                <default>true</default>
                <label>Not Rated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>